# Electronic_Design

./: CMakeLists.txt  README.md  lock_in_amplifier.SchDoc  nota_de_aplicacion.docx
altium/: lock_in_amplifier.PcbDoc  main.SchDoc  power_supply.SchDoc
altium/files/: lock_in_amplifier.PrjPcb  lock_in_amplifier.PrjPcbStructure
documents/: application_note.docx  technical_data.csv  technical_data.xlsx
documents/power_tree/: power_tree_reference_and_operation.docx
firmware/: CMakeLists.txt  main.c  requirements.txt
firmware/gui/: lockin_gui.py
firmware/src/: adc_backend.h  control.c  control.h  lockin_core.h  pwm_backend.c  pwm_backend.h  serial_protocol.h
firmware/src/app/: serial_protocol.c
firmware/src/dsp/: lockin_core.c
firmware/src/hal/: adc_backend.c  gpio_backend.c  gpio_backend.h  uart_backend.c  uart_backend.h
